--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
 </div>
 
 <a-scene
-  mindar-image="imageTargetSrc: targets.mind;"
+  mindar-image="imageTargetSrc: targets.mind; filterMinCF: 0.0001; filterBeta: 0.001; warmupTolerance: 3; missTolerance: 15;"
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
+
+  
 >
 
   <a-assets>
@@ -308,7 +310,7 @@
       if (!audioUnlocked) return;
       video.play().catch(() => {});
       audio.currentTime = 0;
-      audio.play().catch(() => {});
+      //audio.play().catch(() => {});
     });
 
     target.addEventListener('targetLost', () => {
@@ -322,3 +324,4 @@
 
 </body>
 </html>
+
